fixed the website and improved it on mobile devices

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -3,6 +3,7 @@
 
 :root{
   font-family: 'Ubuntu', sans-serif;
+  font-size: 1.4vh;
 }
 
 .App {
@@ -17,26 +18,26 @@ body{
 }
 
 .nav ul{
-  margin: 0;
-  padding: 0;
   list-style: none;
   display: flex;
   gap: 3rem;
- 
+  font-size: 1.5rem;
 }
 
 .nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 1rem;
+  width: 100%;
   padding: 0 3rem;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
+  box-sizing: border-box;
 }
 
 .nav img{
-  width: 250px;
+  width: 20rem;
   padding: 0.5rem;
+  margin-left: -3rem;
 }
 
 .nav a{
